# breast-cancer-detection-project

./: .gitignore  README.md
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/api/: api.py
backend/models/: dto.py  input_models.py  ml_model_torch.py  response_models.py
backend/service/: mammogram.py  ultrasound.py
frontend/: .eslintrc.json  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.css
frontend/src/components/Button/: PrimaryButton.js  SecondaryButton.js
frontend/src/components/Checkbox/: CheckboxField.js
frontend/src/components/DicomViewer/: DicomViewer.js
frontend/src/components/Dropzone/: Dropzone.js  FileExceedNotification.js
frontend/src/layout/: MainLayout.js
frontend/src/pages/ViewerPage/: ViewerPage.js
frontend/src/routes/: MainRoutes.js  index.js
ml/: pyproject.toml
ml/mammography/data_preprocessing/: config.json  data_preprocessing.py  preprocessing_main.py  process_img.py
ml/mammography/eval/: classification_eval.py  segmentation_eval.py
ml/mammography/models/: classification.py
ml/mammography/train/: classification_config.json  classification_train.py  segmentation_config.json  segmentation_train.py
ml/ultrasound/data_preprocessing/: config.json  preprocess_main.py
ml/ultrasound/eval/: classification_eval.py  segmentation_eval.py
ml/ultrasound/metrics/: metrics.py
ml/ultrasound/models/: classification.py  segmentation.py
ml/ultrasound/train/: classification_config.json  classification_train.py  segmentation_config.json  segmentation_train.py
(+1 files in other folders)
