[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Volodymyr Zherdetskyi <zh210027z@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.110.2"
tqdm = "^4.66.2"
pandas = "^2.2.2"
opencv-python = "^4.9.0.80"
numpy = "^1.26.4"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow="2.10"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
torch = "^2.2.2"
torchvision = "^0.17.2"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
mpld3 = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
